<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Galgotias University</string>
    <string name="action_logout">Logout</string>
    <string name="drawer_open">Menu</string>
    <string name="drawer_close">GU</string>
    <string name="title_welcome">Welcome</string>
    <string name="title_approval">Approval</string>
    <string name="title_campus">campus life</string>
    <string name="title_achievements">achievements</string>
    <string name="welcome_note">Galgotias University (sometimes known as Galgotia University) is a co&#8211;educational private university in Greater Noida (NCR) in the state of Uttar Pradesh, India.\n It was granted university status in 2011 by the Uttar Pradesh government.\nGalgotias University has its main campus (Galgotias Education City) in Greater Noida near Jaypee Sports Complex (Buddh International Circuit) while the original campus called Galgotias Educational Institution Campus One is in Knowledge Park&#8211;II right beside Noida&#8211;Greater Noida Expressway.\n\nType:Private\nLocation:Greater Noida, Uttar Pradesh, India\n28.457543°N 77.497748°E\nWebsite:www.galgotiasuniversity.edu.in\nWebSIM Link:172.16.90.2/iSIM/login\n\n</string>
    <string name="achievement_note">*Education Excellence Award 2013 by One Planet Research (Indo Italian Research Centre) for Best Private Engineering Institute in Noida\n*Galgotias University award by the Hindustan Times for Excellence in Education\n*Galgotias Leads in Mail Today B&#8211;School Survey 2013\n*Among Dun and Bradstreet\'s India\'s leading Business Schools\n*Ranked A++ Institute among recruiters, academicians and professionals on the basis of its Brand Reputation &#8211; Mainline Media Pvt. Ltd.\n*Ranked among Top 3 Engineering Colleges of India by ICMR / The Sunday Indian\n*Galgotias university Ranked No&#8211;1 in Amar Ujala &#8211; IMRB International Survey 2012\n*Ranked among leading Indian B&#8211;Schools in ICMR &#8211; 4Ps B and M B&#8211;School Survey\n*Top Ranking in Intellectual Capital in India\'s Best B&#8211;School Survey by Business World\n*Ranked among Best B&#8211;Schools by MARS National Survey, The Week\n*Galgotias University awarded for Teaching Excellence at Indian Education Award 2012\n*Awarded Business School with Best Industry Interface at Suntec, Singapore\n*Among Top Institutions in India for 100%% Placements by C&#8211;fore Survey\n*ASIC, UK accredits Galgotias Globally Benchmarked Higher Education \n*18th Business School Affaire and Dewang Mehta Business School Awards\n*Hailes as School for Leaders and Ranked Among Top Engineering Colleges for Academic Excellence and Placements by the Hindustan Times &#8211; C Fore Survey\n*Crisil Rating&#8211; National Level A+, State Level A++\n*Best Industry Interface Award by Asia\’s Best B&#8211;School Awards\n*Ranked among India\'s Best Professional Institutions by Outlook &#8211; MDRA Survey, 2011\n*Ranked among Top Engineering Institutions year after year by Dataquest &#8211; CMR Survey, 2011\n*Zee&#8211;Business Ipsos Indica Survey (World No. 3 Research Agency) –Top B&#8211;Schools in India\n*Open C&#8211;Fore Survey rating to be among the Top Colleges for 100%% Placements\n*Academic Excellence Award 08&#8211;09 by Shri Sriprakash Jaiswal, Minister of State of Home Affairs for Best Academic Infrastructure and Faculty\n*A+ ranking in Business India B&#8211;School Survey 2011\n*Certificate of Excellence for the Best Management Institute from NCR (Noida) by India Achievers Podium, New Delhi\n*Prestigious UPTU Academic Excellence Award 2009\n*Title as the \'School of Leaders\' and rank among the top Engineering College of the country for Academic Excellence and placement by Hindustan Times C Fore survey\n*One of  India’s Best Engineering Colleges by Carrier 360\n*TIMES Research Educational Excellence Award instituted by one of India’s leading Market Research Companies, ‘Times Research’ to recognize the contribution made by the private sector in promoting excellence in professional education in India\n*Rank among top engineering colleges in India by DATAQUEST ’09,OUTLOOK’ 09 and INDIA TODAY ASPIRE ‘09</string>
    <string name="approval_note">Galgotias University and the Degrees awarded by the university are recognized by the UGC.\n\nApproval by AICTE:\n\n\nAll India Council for Technical Education (AICTE) is the statutory Body of the Government of India whose jurisdiction for granting approval is only for technical institutions which are affiliated to a University.  Universities are out of its purview for grant of approval.  As Galgotias University, Uttar Pradesh Act has been enacted by State Legislature, it is a legitimate University of this country established as per Section 2(f) of the UGC Act and, therefore, does not require AICTE approval. This standing of law is based on the judgment by hon’ble Supreme Court in the case of Bharathidasan University vs AICTE.</string>
    <string name="campus_note">**Campuses**\n\nGalgotias University has two campuses in Greater Noida.\n  \:\:The old campus known as Galgotias Educational Institution Campus One in Knowledge Park phase&#8211;2 of Greater Noida.\n  ::The new campus is 10 km from Campus One and is at the Yamuna Expressway on the outer of Greater Noida.\n\nThe Campus One mostly has the offices of Galgotias University and the three old colleges. The Boys hostel is at Campus One.\n\nNew Campus is well planned with many high&#8211;tech facilities that can\'t be provided on Campus One. The New Campus hosts most of the classes and serves as the education centre. The new campus is expected to have 18 blocks and is spread over 95 acres. A regular bus service operated by the university runs between the campuses.\n\n**Central Library**\n\nThe Central Library consists of a number of departmental libraries which collectively support the teaching, research and extension programmes. All students, faculty members and employees are entitled to use the library facilities. Besides having a huge collection of books on engineering, science and bioinformatics, humanities and social sciences, and mass communication, it offers library services through its divisions. It uses a Libsys/SIM software package (an integrated multi&#8211;user library management system that supports all in&#8211;house operations). Libsys consists of modules on acquisition, cataloguing, circulation, serials, article indexing and OPAC.The Central Library has 9925 titles, 74585 volumes, 238 national journals, 165 international journals, 75 magazines, and 760 CDs. The library is in institutional membership with DELNET and American Central Library.\n\n**Web SIM and FFCS**\n\nWeb SIM is a service offered to Galgotias University students that stores all student data from personal details to placement details, library information, assignments, holidays information, etc. Every student is given a username and password to access this data.\n\nGalgotias University offers four types of subjects: University Core, University Elective, Programme Core and Programme Elective. The fully flexible credit&#8211;based system enables students to choose their elective subjects independently and provides flexibility to choose their hours of lectures. Students are supposed to complete the required number of credits by choosing the right programmes and attending the required number of lectures.</string>
    <string name="flipper_text_1">GALGOTIAS\nUNIVERSITY</string>
    <string name="flipper_text_2">A\nsmall\nstep\ntowards a\nbig leap</string>
    <string name="flipper_text_3">Great things\nhappen in\nthe most\nunpredictable\nplaces</string>
    <string name="flipper_text_4">The\nGoogle\nof GU\nis here</string>
    <string name="flipper_text_5">Where\nKnowledege\nis\nstrength</string>
    <string name="flipper_text_6">A gift\nfrom the\nthink\ntank of\nGu</string>
    <string name="flipper_text_7">It\ndoesn\'t\nget any\nbetter</string>
    <string name="service_name">News Service</string>
    <string name="action_about">About</string>
    <string name="ad_unit_id">a15337469b58870</string>
    <string name="title_activity_about">About</string>
    <string name="developer_note">->Unofficial App for "Galgotias University".\n->Created By-"AMAN KAPOOR"(B-Tech).\nArticles and News Handled by "Ayush Thakur" \n->You can get the license for this app here:\n"http://www.binpress.com/license/view/l/856bb6ea1cb34bc0cb94d382b7bce895"\n->Any Articles(News) published in this app is not the responsibility of the developer or anyone related to this.\n->Please Rate and comment on the app in play store for motivating for further development.\n->TeenScribblers is the development team name.</string>
    <string name="title_activity_loged_in">Personal Info</string>
    <string name="title_activity_attendance">Attendance</string>
    <string name="title_activity_options">Options</string>
    <string name="title_activity_attendance_chooser">Choose Attendance</string>
    <string name="subject">Subject</string>
    <string name="title_activity_result">Result</string>
    <string name="title_activity_result_chooser">Choose your Sem</string>

</resources>